--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="right">
         <div class="card-image">
           <div class="circle1">
-            <img src="freecodecamp.png" alt="Certificate 1">
+            <img src="Screenshot 2025-06-19 162101.png" alt="Certificate 1">
             <button>
               <a href="https://freecodecamp.org/certification/fcc6155693d-fe01-47f6-a580-cd165926433d/responsive-web-design" target="_blank">
                 Verify <i class="fas fa-external-link-alt"></i>
